<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_label_screen_title"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="120dp"
        android:text="@string/screen_title_login"
        android:textAlignment="center"
        android:textColor="#008080"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_label_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="194dp"
        android:text="@string/login_label_username"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_textbox_user_name"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login_hint_username"
        android:inputType="text"
        android:labelFor="@id/c_q_label_quiz_name"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/login_label_user_name"
        app:layout_constraintTop_toBottomOf="@+id/login_label_screen_title" />

    <Button
        android:id="@+id/login_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorFadBlue"
        android:fontFamily="sans-serif"
        android:text="@string/login_button_register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textbox_user_name" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#008080"
        android:fontFamily="sans-serif"
        android:text="@string/login_button_login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/login_button_register"
        app:layout_constraintTop_toBottomOf="@+id/login_textbox_user_name" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="363dp"
        android:layout_height="61dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="Welcome to SDPVocabQuiz App"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#993088"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_label_screen_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp" />


</android.support.constraint.ConstraintLayout>